--- a/.github/workflows/ecs_scaling.yml
+++ b/.github/workflows/ecs_scaling.yml
@@ -3,30 +3,68 @@ name: ECS Scaling
 on:
   push:
     branches:
-      - main 
+      - main
 
 jobs:
-  ecs_scaling:
+  scale:
     runs-on: ubuntu-latest
-
-    env:
-      DESIRED_COUNT: ${{ secrets.DESIRED_COUNT }}
-
+    
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set Up Python
-        uses: actions/setup-python@v2
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          python-version: 3.8
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ap-south-1
 
-      - name: Install AWS CLI
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli
+      - run: chmod +x multi-ecs-scaling.sh
+      - run: ./multi-ecs-scaling.sh ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && contains(github.event.head_commit.message, 'downscale') && 'downscale' || 'upscale' }}
 
-      - name: Execute ECS Scaling
-        run: |
-          chmod +x multi-ecs-scaling.sh
-          ./multi-ecs-scaling.sh $DESIRED_COUNT
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# name: ECS Scaling
+
+# on:
+#   push:
+#     branches:
+#       - main  # Adjust the branch as needed
+
+# jobs:
+#   ecs_scaling:
+#     runs-on: ubuntu-latest
+
+#     env:
+#       DESIRED_COUNT: ${{ secrets.DESIRED_COUNT }}
+
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v2
+
+#       - name: Install AWS CLI
+#         run: |
+#           sudo apt-get update
+#           sudo apt-get install -y awscli
+
+#       - name: Execute ECS Scaling
+#         run: |
+#           chmod +x multi-ecs-scaling.sh
+#           ./multi-ecs-scaling.sh ${{ github.event_name }}
