--- a/.github/workflows/ecs_scaling.yml
+++ b/.github/workflows/ecs_scaling.yml
@@ -1,10 +1,15 @@
 name: ECS Scaling
 
 on:
-  push:
-    branches:
-      - main
-
+  workflow_dispatch:
+    inputs:
+      name:  
+        required: true
+        type: choice
+        default: upscale
+        options:
+          - upscale
+          - downscale
 jobs:
   scale:
     runs-on: ubuntu-latest
@@ -19,10 +24,12 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: ap-south-1
-
-      - run: chmod +x multi-ecs-scaling.sh
-      - run: ./multi-ecs-scaling.sh ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && contains(github.event.head_commit.message, 'downscale') && 'downscale' || 'upscale' }}
-
+      - name: Make the shell file exeutable
+        run: chmod +x multi-ecs-scaling.sh
+        
+      - name: Scaling ECS
+        run: ./multi-ecs-scaling.sh ${{inputs.name}} 
+      
 
 
 
